1.2.0b2:
    WATO:
    * FIX: deletion of automation accounts now works

    Multisite
    * Layout and design update
    * Quicksearch: display site name if more than one different site
      is present in the current search result list
    * FIX: Fixed encoding problem in "custom notification" message

    Checks & Agents:
    * FIX: snmp_uptime handles empty snmp information without exception
    * FIX: Oracle checks try to handle ORA-* errors reported by the agent
      All oracle checks will return UNKNOWN when finding an ORA-* message
    * FIX: filesystem levels set via WATO didn't work, but do now

1.2.0b1:
    Core, Setup, etc.:
    * new tool 'livedump' for dumping configuration and status
      information from one monitoring core and importing this
      into another.
    * Enable new check registration API (not yet used in checks)
    * FIX: fix handling of prefix-tag rules (+), needed for WATO
    * FIX: handle buggy SNMP devices with non-consecutive OIDS
      (such as BINTEC routers)
    * Check API allows a check to get node information
    * FIX: fix problem with check includes in subchecks
    * Option --checks now also applies to ad-hoc check (e.g.
      cmk --checks=mrpe,df -v somehost)
    * check_mk_templates.cfg: added s to notification options
      of host and service (= downtime alerts)

    WATO:
    * Hosttag-editor: allow reordering of tags
    * Create very basic sample configuration when using
      WATO the first time (three tag groups, two rules)
    * Much more checks are configurable via WATO now
    * Distributed WATO: Made all URL calls using curl now
    * FIX: fix bug in inventory in validate_datatype()
    * Better output in case of inventory error
    * FIX: fix bug in host_icon rule on non OMD
    * FIX: do not use isdisjoint() (was in rule editor on Lenny)
    * FIX: allow UTF-8 encoded permission translations
    * FIX: Fixed several problems in OMD apache shared mode